# utils

./: .gitignore  README.md  config.json  createproject  createproject.py  mkcp.py  mkcp_config.json  mkprogui.py
CMake_templates/: avr-CMakeLists.txt  cv-CMakeLists.txt  elinux-CMakeLists.txt  libavr-CMakeLists.txt  libbaremetal-CMakeLists.txt  libcv-CMakeLists.txt  libelinux-CMakeLists.txt  libtiva-CMakeLists.txt  tiva-CMakeLists.txt
Doxygen_templates/: Doxyfile
SublimeText_templates/: CMake.sublime-build
Sublime_templates/: CMake.sublime-build
templates/: avr-CMakeLists.txt  cv-CMakeLists.txt  elinux-CMakeLists.txt  linux-CMakeLists.txt
templates/avr/: CMakeLists.txt
templates/avr_library/: CMakeLists.txt
templates/baremetal_library/: CMakeLists.txt
templates/cv/: CMakeLists.txt
templates/cv_library/: CMakeLists.txt
templates/elinux/: CMakeLists.txt
templates/elinux_library/: CMakeLists.txt
templates/tiva/: startup_gcc.c
templates/tiva_freertos/: CMakeLists.txt  FreeRTOSConfig.h  linker_config.ld  startup_gcc.c
templates/tiva_library/: CMakeLists.txt
